# yew-bots

./: Cargo.toml  README.md  index-1f9e4f42713243f9.js  index-1f9e4f42713243f9_bg.wasm  index-5790761fa09d7523.js  index-5790761fa09d7523_bg.wasm  index-eb0c8beca4c05288.js  index-eb0c8beca4c05288_bg.wasm  index-ec21bd9e52b4cdc9.js  index-ec21bd9e52b4cdc9_bg.wasm  index.html
.github/workflows/: rust.yml
src/: bot.rs  field.rs  main.rs
